# ARCOS-proyecto1

./: CMakeLists.txt
aos/: Image_aos.hpp  imageaos.cpp  imgaos.cpp  pruebas_aos.cpp
common/: common.hpp  progargs.cpp
soa/: Image_soa.hpp  imagesoa.cpp  imgsoa.cpp  pruebas_soa.cpp
