cmake_minimum_required(VERSION 3.23)
project(ARCOS-proyecto1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")
add_library(common common/progargs.cpp common/common.hpp)
add_library(aos aos/imageaos.cpp aos/imgaos.cpp aos/Image_aos.hpp aos/pruebas_aos.cpp)
add_library(soa soa/imagesoa.cpp soa/Image_soa.hpp)
add_executable(image-aos aos/pruebas_aos.cpp)
add_executable(image-soa soa/pruebas_soa.cpp)
target_link_libraries (image-aos common aos)
target_link_libraries (image-soa common soa)